; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/netronome/nfp/extr_nfp_net_common.c_nfp_net_clean.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/netronome/nfp/extr_nfp_net_common.c_nfp_net_clean.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nfp_net = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @nfp_net_clean(%struct.nfp_net* %0) #0 {
  %2 = alloca %struct.nfp_net*, align 8
  store %struct.nfp_net* %0, %struct.nfp_net** %2, align 8
  %3 = load %struct.nfp_net*, %struct.nfp_net** %2, align 8
  %4 = getelementptr inbounds %struct.nfp_net, %struct.nfp_net* %3, i32 0, i32 0
  %5 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %9, label %8

8:                                                ; preds = %1
  br label %19

9:                                                ; preds = %1
  %10 = load %struct.nfp_net*, %struct.nfp_net** %2, align 8
  %11 = getelementptr inbounds %struct.nfp_net, %struct.nfp_net* %10, i32 0, i32 0
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @unregister_netdev(i32 %13)
  %15 = load %struct.nfp_net*, %struct.nfp_net** %2, align 8
  %16 = call i32 @nfp_ccm_mbox_clean(%struct.nfp_net* %15)
  %17 = load %struct.nfp_net*, %struct.nfp_net** %2, align 8
  %18 = call i32 @nfp_net_reconfig_wait_posted(%struct.nfp_net* %17)
  br label %19

19:                                               ; preds = %9, %8
  ret void
}

declare dso_local i32 @unregister_netdev(i32) #1

declare dso_local i32 @nfp_ccm_mbox_clean(%struct.nfp_net*) #1

declare dso_local i32 @nfp_net_reconfig_wait_posted(%struct.nfp_net*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
